# card-fraud-mcp-gateway

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  platform-adapter.yaml  pyproject.toml
app/: __init__.py  audit.py  backends.py  config.py  constants.py  main.py  metrics.py  prompts.py  resources.py  server.py
app/domains/: __init__.py  kafka.py  ops.py  platform.py  postgres.py  redis.py  storage.py
app/security/: __init__.py  allowlist.py  auth.py  policy.py  ratelimit.py  redaction.py
cli/: _runner.py  auth0_bootstrap.py  auth0_verify.py  doppler_local.py
docs/: README.md  analysis-and-review.md  codemap.md
docs/01-setup/: auth0-setup-guide.md  connecting-clients.md  local-setup.md
docs/02-development/: architecture.md  flow-01-foundation-and-bootstrap.md  flow-02-auth-and-authorization.md  flow-03-postgres-readonly.md  flow-04-redis-and-cache.md  flow-05-kafka-and-redpanda.md  flow-06-minio-and-artifacts.md  (+5 more)
scripts/: demo_agent.py  setup_auth0.py  verify_auth0.py
tests/: conftest.py  test_allowlists.py  test_app.py  test_audit.py  test_audit_extended.py  test_auth.py  test_backends.py  test_cli.py  test_config.py  test_e2e_runtime.py  test_hardening.py  test_kafka.py  test_kafka_domain.py  test_live_server.py  test_main.py  test_ops.py  test_ops_domain.py  test_platform_domain.py  test_policy.py  test_postgres_domain.py  test_postgres_query_access.py  test_redaction.py  test_redis_domain.py  test_resources.py  test_server.py  test_sql_safety.py  test_storage_domain.py
(+5 files in other folders)
